versao reactive